# python-engineering-week1

./: .gitignore  README.md  day1_exercises.py  pyproject.toml  pyproject.toml.txt  requirements.txt  simple_output.csv  test.txt  text.csv
data/cleaned/: clean_test_name.csv  clean_test_name_age.csv
data/raw/: test.csv
scripts/: day1_exercises.py
src/: csv_cleaner.py
src/task_manage/: database.py  main.py  models.py
tests/: test_csv_cleaner.py  test_task_manage.py
