[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# black 格式化配置
[tool.black]
line-length = 88
target-version = ["py310", "py311"]
extend-exclude = [".venv", "data", "__pycache__"]

# isort 导入排序配置（兼容black，无冲突）
[tool.isort]
profile = "black"
line_length = 88
extend_skip_glob = [".venv/*", "data/*", "__pycache__/*"]

# ruff 代码检查+自动修复配置
[tool.ruff]
line-length = 88
extend-exclude = [".venv", "data", "__pycache__", "tests"]
fix = true
show-fixes = true
lint.select = ["E", "W", "F", "I", "UP"]
lint.ignore = ["E501"]